QMetaObject::normalizeType: Fix parsing of type which contains "const" in names

Regression since b881d8fb99972f1bd04ab4c84843cc8d43ddbeed

Task-number: QTBUG-9354
Reviewed-by: Kent Hansen